--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ a {
 }
 
 .logo {
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17;
@@ -25,7 +25,7 @@ a {
   text-transform: uppercase;
 }
 
-.first-navi {
+.first-navi .main-link{
   font-weight: 500;
 }
 
@@ -41,8 +41,7 @@ a {
   font-style: normal;
 }
 
-.mail-info, 
-.tel-info {
+.second-navi .main-link {
   color: #434455;
 }
 
@@ -105,8 +104,9 @@ a {
 .section-title {
   font-size: 36px;
   line-height: 1.11;
-  /* text-align: center; */
+  text-align: center;
   color: #2E2F42;
+  letter-spacing: 0.02em;
   text-transform: capitalize;
 }
 
@@ -115,6 +115,6 @@ a {
   color: #F4F4FD;
 }
 
-/* .info .logo {
+.info .logo {
   color: #F4F4FD;
-} */
+}
